k8s/apps/attic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic
  namespace: attic
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: attic
  ports:
    - name: http
      port: 8080
      targetPort: http
